# schwab-to-discord

./: .dockerignore  .env.example  .env.secrets.example  .gitignore  CODE_REVIEW.md  CONTRIBUTING.md  README.md  SETUP_GUIDE.md  check_account.py  check_positions.py  debug_raw_orders.json  docker-compose.yml  dockerfile  export_to_gsheet.py  export_trades.py  main.py  pyproject.toml  rebuild_cost_basis.py  test_discord.py
.github/workflows/: docker-build.yml
config/: .env.secrets.example  schwab-to-discord.env
docs/: GSHEET_EXPORT.md
docs/docs/: Coding_Setup.md  Strategy.md  api_schwab.md  config.md  env.md  index.md  logging.md  main.md  modules_trade.md
docs/site/: 404.html  index.html
docs/site/search/: search_index.json
docs/site/setup/: index.html
src/: main.py
src/app/: __init__.py  bot.py  config.py  constants.py  cost_basis.py  main.py
src/app/api/: positions.py  schwab.py
src/app/core/: __init__.py  config.py  errors.py  logging.py  runtime.py
src/app/db/: connection.py  cost_basis_db.py  queries.py  trade_state_db.py  trades_db.py  trades_repo.py
src/app/discord/: discord_message.py  discord_webhook.py
src/app/domain/: __init__.py  cost_basis.py  trade_poster.py  trade_processor.py
src/app/exports/: __init__.py  excel_exporter.py
src/app/gsheet/: __init__.py  gsheet_client.py
src/app/models/: config.py  data.py  (+1 more)
src/data/: trades.db-shm  trades.db-wal
src/schwab_to_discord.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_constants.py
tests/api/: test_schwab_api.py
tests/models/: test_config.py
(+11 files in other folders)
